# cardano-battery-passport

./: .env.example  .gitignore  README.md  arquitetura-dpp.md  mao-na-massa.md  pyproject.toml  requirements.txt  setup.sh  uverify-bug-report.md
src/verificador_dpp/: __init__.py  __main__.py  _html_utils.py  _payloads.py  cliente_blockfrost.py  emissor_direto.py  emissor_sdk.py  modelos.py  parser_credencial.py  relatorio_emissao_html.py  relatorio_html.py  relatorio_passaporte.py  relatorio_reciclagem_html.py  verificador.py  verificador_direto.py  verificador_misto.py  verificador_sdk.py  wallet.py
tests/: test_cexplorer_links.py  test_emissor_sdk.py  test_integration.py  test_modelos.py  test_parser_credencial.py  test_payloads.py  test_relatorio.py  test_relatorio_emissao_html.py  test_relatorio_html.py  test_relatorio_reciclagem_html.py
