[project]
name = "verificador-dpp"
version = "0.1.0"
description = "Workshop DPP — emissão e verificação de Passaportes Digitais de Produto em Cardano preprod"
requires-python = ">=3.11"
dependencies = [
    "pycardano>=0.11.0",
    "blockfrost-python>=0.6.0",
    "python-dotenv>=1.0.0",
    "uverify-sdk>=0.1.8",
    "cbor2<6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verificador_dpp"]
